--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: video_thumbnail_slider
-description: A Flutter package that provides a customizable video thumbnail slider widget. This widget allows you to display a slider with thumbnails generated from a video, making it easy to navigate and preview different parts of the video.
-version: 0.0.1
-homepage:
+description: A Flutter package that provides a customizable video thumbnail slider widget.
+version: 0.0.2
+repository: https://github.com/nguyenchiemdu/flutter-video-thumbnail-slider
 
 environment:
   sdk: ">=2.19.1 <3.0.0"
